<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nomeLbl"
            android:hint="@string/nome"
            android:textSize="24sp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="38dp"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:textColor="#2196F3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/cittaText"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="240dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/citta"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/viaText"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cittaText"
            app:layout_constraintEnd_toEndOf="@+id/cittaText" android:hint="@string/via_piazza"/>
    <Button
            android:text="@string/trova_parcheggio"
            android:layout_width="196dp"
            android:layout_height="134dp"
            android:id="@+id/trovaParcheggioBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="68dp"
            app:layout_constraintHorizontal_bias="0.497" android:backgroundTint="#314ABD" android:textColor="#03A9F4"/>
    <TextView
            android:text="@string/benvenuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="#03A9F4"
            android:textSize="30sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            android:layout_marginEnd="37dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/dove_vuoi_parcheggiare_oggi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="24sp"
            android:textColor="#03A9F4" app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/nomeLbl" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/uecapoo"
            android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textView"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>